Fix some text alignment problems with disjunctions on mobile

--- a/components/HowToPlay/styles.module.scss
+++ b/components/HowToPlay/styles.module.scss
@@ -466,7 +466,7 @@
 
   .ellipsis {
     font-size: 5rem;
-    margin: 0 2rem;
+    margin: 4rem 2rem;
     display: flex;
     justify-content: center;
     position: relative;
@@ -485,18 +485,27 @@
   color: orange;
 }
 
-@media only screen and (max-width: 1270px) { .collapse_below_1270 { flex-direction: column; } }
-@media only screen and (max-width: 1980px) { .collapse_below_1980 { flex-direction: column; } }
-@media only screen and (max-width: 1580px) { .collapse_below_1580 { flex-direction: column; } }
-@media only screen and (max-width: 1570px) { .collapse_below_1570 { flex-direction: column; } }
-@media only screen and (max-width: 1350px) { .collapse_below_1350 { flex-direction: column; } }
-@media only screen and (max-width: 1270px) { .collapse_below_1270 { flex-direction: column; } }
-@media only screen and (max-width: 1160px) { .collapse_below_1160 { flex-direction: column; } }
-@media only screen and (max-width: 1150px) { .collapse_below_1150 { flex-direction: column; } }
-@media only screen and (max-width: 1140px) { .collapse_below_1140 { flex-direction: column; } }
-@media only screen and (max-width: 1110px) { .collapse_below_1110 { flex-direction: column; } }
-@media only screen and (max-width: 860px) { .collapse_below_860 { flex-direction: column; } }
-@media only screen and (max-width: 850px) { .collapse_below_850 { flex-direction: column; } }
+
+@mixin collapsed_recipe {
+  flex-direction: column;
+
+  .subtitle {
+    margin-bottom: 2.5rem;
+  }
+}
+
+@media only screen and (max-width: 1270px) { .collapse_below_1270 { @include collapsed_recipe; } }
+@media only screen and (max-width: 1980px) { .collapse_below_1980 { @include collapsed_recipe; } }
+@media only screen and (max-width: 1580px) { .collapse_below_1580 { @include collapsed_recipe; } }
+@media only screen and (max-width: 1570px) { .collapse_below_1570 { @include collapsed_recipe; } }
+@media only screen and (max-width: 1350px) { .collapse_below_1350 { @include collapsed_recipe; } }
+@media only screen and (max-width: 1270px) { .collapse_below_1270 { @include collapsed_recipe; } }
+@media only screen and (max-width: 1160px) { .collapse_below_1160 { @include collapsed_recipe; } }
+@media only screen and (max-width: 1150px) { .collapse_below_1150 { @include collapsed_recipe; } }
+@media only screen and (max-width: 1140px) { .collapse_below_1140 { @include collapsed_recipe; } }
+@media only screen and (max-width: 1110px) { .collapse_below_1110 { @include collapsed_recipe; } }
+@media only screen and (max-width: 860px) { .collapse_below_860 { @include collapsed_recipe; } }
+@media only screen and (max-width: 850px) { .collapse_below_850 { @include collapsed_recipe; } }
 
 @media only screen and (max-width: 1050px) { .wood_sliders_spacer { height: 8rem; } }
 @media only screen and (max-width: 900px) { .wood_sliders_spacer { height: 12rem; } }
@@ -543,12 +552,18 @@
     margin: 1.2rem 0;
   }
 
-  .recipe .disjunction .or {
-    margin: 0 -3rem;
-  }
+  .recipe .disjunction.three_cards {
+    .or {
+      margin: 0 -3rem;
+    }
 
-  .recipe .disjunction .zoomable_card:first-child .title {
-    transform: translateX(-0.7rem);
+    &.player_crab_cloak .player_card .title {
+      transform: translateX(-0.6rem);
+    }
+
+    &.helix_torch_beacon .beacon_card .title {
+      transform: translateX(0.9rem);
+    }
   }
 }
 
